# embed-ncert

./: .dockerignore  .env  .gitignore  Dockerfile  Notes.md  Probe.ipynb  README.md  agent.py  alembic.ini  check_configs.py  db.py  download_models.sh  embed_pdf_to_vector_store.py  endpoints.md  endpoints.py  mock_server.py  pdf_to_md.py  pyproject.toml  pyrightconfig.json  rag.py  requirements.txt  serve_local.py  serve_ngrok.py  server.py
alembic/: env.py
alembic/versions/: 3b1bb18e45c9_create_table_agent_conversation_history.py
app_config/: __init__.py  app_config.py  embedding_config.py  formula_understanding_pipeline.py  ocr_config.py  picture_desc_config.py  tokenizer_config.py  vector_store_config.py  vlm_config.py
app_config/docling_config/: __init__.py  formula_understanding_pipeline.py  ocr_config.py  picture_desc_pipeline.py  text_enhancer_pipeline.py
assets/prompts/: agent.txt  agent_v1.txt  picture_desc_prompt.txt
assets/prompts/granite3.2-vision:2b/: text_analyser_prompt.txt
assets/prompts/qwen2.5vl:7b/: formula_analyser_prompt.txt
conf/app/: default.yaml  english.yaml  hindi.yaml  math.yaml
tests/: test_app_config.py  test_errors.py  test_retry.py  test_throttle.py
utils/: api_image_request.py  batch.py  errors.py  hydra_utils.py  mlflow_ollama.py  mlflow_utils.py  patch_mem0.py  retry.py  throttle.py
