[project]
name = "embed-ncert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "docling>=2.55.0",
    "hydra-core>=1.3.2",
    "langchain-docling>=1.1.0",
    "load-dotenv>=0.1.0",
    "onnxruntime>=1.23.0",
    "opencv-python>=4.12.0.88",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
