[project]
name = "embed-ncert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "docling>=2.55.0",
    "faiss-cpu>=1.12.0",
    "fastapi[standard]>=0.120.3",
    "gorilla>=0.4.0",
    "huggingface-hub[cli]>=0.35.3",
    "hydra-core>=1.3.2",
    "kuzu>=0.11.3",
    "langchain<=1.0",
    "langchain-community>=0.3.31",
    "langchain-docling>=1.0",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.10",
    "langchain-qdrant>=0.2.1",
    "langgraph<=1.0",
    "load-dotenv>=0.1.0",
    "mem0ai>=1.0.0",
    "mlflow>=3.5.1",
    "ngrok==1.4.0",
    "onnxruntime>=1.23.0",
    "opencv-python>=4.12.0.88",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "rank-bm25>=0.2.2",
    "rapid-latex-ocr>=0.0.6",
    "rapidocr>=3.4.1",
    "sentence-transformers>=5.1.1",
    "uvicorn>=0.38.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true

[dependency-groups]
dev = [
    "jupyterlab>=4.4.10",
    "toml-to-requirements"
]
